--- a/deploy/selfhost/docker-compose.yml
+++ b/deploy/selfhost/docker-compose.yml
@@ -44,9 +44,8 @@ services:
     <<: *app-env
     image: ${DOCKERHUB_USER:-makeplane}/plane-frontend:${APP_RELEASE:-stable}
     platform: ${DOCKER_PLATFORM:-}
-    pull_policy: ${PULL_POLICY:-always}
+    pull_policy: if_not_present
     restart: unless-stopped
-    command: node web/server.js web
     deploy:
       replicas: ${WEB_REPLICAS:-1}
     depends_on:
@@ -57,9 +56,8 @@ services:
     <<: *app-env
     image: ${DOCKERHUB_USER:-makeplane}/plane-space:${APP_RELEASE:-stable}
     platform: ${DOCKER_PLATFORM:-}
-    pull_policy: ${PULL_POLICY:-always}
+    pull_policy: if_not_present
     restart: unless-stopped
-    command: node space/server.js space
     deploy:
       replicas: ${SPACE_REPLICAS:-1}
     depends_on:
@@ -71,9 +69,8 @@ services:
     <<: *app-env
     image: ${DOCKERHUB_USER:-makeplane}/plane-admin:${APP_RELEASE:-stable}
     platform: ${DOCKER_PLATFORM:-}
-    pull_policy: ${PULL_POLICY:-always}
+    pull_policy: if_not_present
     restart: unless-stopped
-    command: node admin/server.js admin
     deploy:
       replicas: ${ADMIN_REPLICAS:-1}
     depends_on:
@@ -84,7 +81,7 @@ services:
     <<: *app-env
     image: ${DOCKERHUB_USER:-makeplane}/plane-backend:${APP_RELEASE:-stable}
     platform: ${DOCKER_PLATFORM:-}
-    pull_policy: ${PULL_POLICY:-always}
+    pull_policy: if_not_present
     restart: unless-stopped
     command: ./bin/docker-entrypoint-api.sh
     deploy:
@@ -99,7 +96,7 @@ services:
     <<: *app-env
     image: ${DOCKERHUB_USER:-makeplane}/plane-backend:${APP_RELEASE:-stable}
     platform: ${DOCKER_PLATFORM:-}
-    pull_policy: ${PULL_POLICY:-always}
+    pull_policy: if_not_present
     restart: unless-stopped
     command: ./bin/docker-entrypoint-worker.sh
     volumes:
@@ -113,7 +110,7 @@ services:
     <<: *app-env
     image: ${DOCKERHUB_USER:-makeplane}/plane-backend:${APP_RELEASE:-stable}
     platform: ${DOCKER_PLATFORM:-}
-    pull_policy: ${PULL_POLICY:-always}
+    pull_policy: if_not_present
     restart: unless-stopped
     command: ./bin/docker-entrypoint-beat.sh
     volumes:
@@ -127,7 +124,7 @@ services:
     <<: *app-env
     image: ${DOCKERHUB_USER:-makeplane}/plane-backend:${APP_RELEASE:-stable}
     platform: ${DOCKER_PLATFORM:-}
-    pull_policy: ${PULL_POLICY:-always}
+    pull_policy: if_not_present
     restart: "no"
     command: ./bin/docker-entrypoint-migrator.sh
     volumes:
@@ -167,7 +164,7 @@ services:
     <<: *app-env
     image: ${DOCKERHUB_USER:-makeplane}/plane-proxy:${APP_RELEASE:-stable}
     platform: ${DOCKER_PLATFORM:-}
-    pull_policy: ${PULL_POLICY:-always}
+    pull_policy: if_not_present
     ports:
       - ${NGINX_PORT}:80
     depends_on:
